-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.1.1
-
None
-
3
-
4618
On one MDT log, we have a lot of messages (~2000) send to syslog like :
1335060942 2012 Apr 22 04:15:42 mdt kern warning kernel Lustre: 18525:0:(mdt_handler.c:888:mdt_getattr_name_lock()) header@ffff880f99689780[0x0, 1, [0x208306b93:0x51c6:0x0] hash]
{ 1335060942 2012 Apr 22 04:15:42 mdt kern warning kernel Lustre: 18525:0:(mdt_handler.c:888:mdt_getattr_name_lock()) ....mdt@ffff880f996897d8mdt-object@ffff880f99689780(ioepoch=0 flags=0x0, epochcount=0, writecount=0) 1335060942 2012 Apr 22 04:15:42 mdt kern warning kernel Lustre: 18525:0:(mdt_handler.c:888:mdt_getattr_name_lock()) ....cmm@ffff880f0e93bc40[local] 1335060942 2012 Apr 22 04:15:42 mdt kern warning kernel Lustre: 18525:0:(mdt_handler.c:888:mdt_getattr_name_lock()) ....mdd@ffff880fdfb29300mdd-object@ffff880fdfb29300(open_count=0, valid=0, cltime=0, flags=0) 1335060942 2012 Apr 22 04:15:42 mdt kern warning kernel Lustre: 18525:0:(mdt_handler.c:888:mdt_getattr_name_lock()) ....osd-ldiskfs@ffff881020b328c0osd-ldiskfs-object@ffff881020b328c0(i:(null):0/0)[plain] 1335060942 2012 Apr 22 04:15:42 mdt kern warning kernel Lustre: 18525:0:(mdt_handler.c:888:mdt_getattr_name_lock()) } header@ffff880f99689780
1335060942 2012 Apr 22 04:15:42 mdt kern warning kernel Lustre: 18525:0:(mdt_handler.c:888:mdt_getattr_name_lock()) Parent doesn't exist!
1335060942 2012 Apr 22 04:15:42 mdt kern warning kernel Lustre: 18464:0:(mdt_handler.c:888:mdt_getattr_name_lock()) header@ffff881e78f90380[0x0, 1, [0x208306b93:0x9a34:0x0] hash]{
1335060942 2012 Apr 22 04:15:42 mdt kern warning kernel Lustre: 18464:0:(mdt_handler.c:888:mdt_getattr_name_lock()) ....mdt@ffff881e78f903d8mdt-object@ffff881e78f90380(ioepoch=0 flags=0x0, epochcount=0, writecount=0)
1335060942 2012 Apr 22 04:15:42 mdt kern warning kernel Lustre: 18525:0:(mdt_handler.c:888:mdt_getattr_name_lock()) header@ffff880f99689780[0x0, 1, [0x208306b93:0x51c6:0x0] hash]
header@ffff880f99689780
1335060942 2012 Apr 22 04:15:42 mdt kern warning kernel Lustre: 18525:0:(mdt_handler.c:888:mdt_getattr_name_lock()) Parent doesn't exist!
1335060942 2012 Apr 22 04:15:42 mdt kern warning kernel Lustre: 17146:0:(mdt_handler.c:888:mdt_getattr_name_lock()) header@ffff880f99689780[0x0, 2, [0x208306b93:0x51c6:0x0] hash]
header@ffff880f99689780
1335060942 2012 Apr 22 04:15:42 mdt kern warning kernel Lustre: 17146:0:(mdt_handler.c:888:mdt_getattr_name_lock()) Parent doesn't exist!
It doesn't seems to create more issues than filling the log.
Isn't it a brother of LU-1098 ?
- duplicates
-
LU-1098 Object doesn't exist!
-
- Resolved
-
- Trackbacks
-
Changelog 2.1
Changes from version 2.1.1 to version 2.1.2 Server support for kernels: 2.6.18308.4.1.el5 (RHEL5) 2.6.32220.17.1.el6 (RHEL6) Client support for unpatched kernels: 2.6.18308.4.1.el5 (RHEL5) 2.6.32220.17.1....